--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -26,7 +26,7 @@ ext {
     annotation_version = '1.1.0'
 
     // UI LIBRARIES
-    constraint_layout_version = '1.1.3'
+    constraint_layout_version = '2.0.0-beta1'
     fragment_version = '1.1.0'
 
     recyclerview_version = '1.0.0'
