--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
 apply from: 'dependencies.gradle'
 buildscript {
     ext.kotlin_version = '1.3.50'
-    ext.gradle_version = '3.5.1'
+    ext.gradle_version = '3.5.2'
     ext.oss_licenses_version = '0.9.5'
     ext.google_services = '4.3.2'
     repositories {
@@ -13,7 +13,7 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "com.android.tools.build:gradle:${gradle_version}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.gms:google-services:$google_services"
         classpath "com.google.android.gms:oss-licenses-plugin:$oss_licenses_version"
