--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -24,6 +24,7 @@ android {
 }
 dependencies {
     implementation project(':domain')
+    implementation project(':util')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
