WIP : add Timber for error logging

--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation commonDependencies.rxkotlin
     implementation commonDependencies.threeTenABP
 
+    implementation commonDependencies.timber
+
     implementation injectionDependencies.koin
 
     testImplementation testDependencies.junit
