--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'io.fabric'
+apply plugin: 'com.google.gms.google-services'
 
 apply plugin: 'com.google.android.gms.oss-licenses-plugin'
 
@@ -130,6 +132,9 @@ dependencies {
     testImplementation testDependencies.mockk
     testImplementation testDependencies.coreTesting
     testImplementation testDependencies.koinTesting
+
+    implementation testDependencies.firebase_analytics
+    implementation testDependencies.crashlytics
 
     androidTestImplementation androidTestDependencies.testCore
     androidTestImplementation androidTestDependencies.testRules
