--- a/encryption/build.gradle
+++ b/encryption/build.gradle
@@ -22,41 +22,27 @@ android {
     }
 
 }
+
 dependencies {
     implementation project(':domain')
+    implementation project(':storage')
     implementation project(':util')
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     def commonDependencies = rootProject.ext.commonDependencies
-    def injectionDependencies = rootProject.ext.injectionDependencies
     def testDependencies = rootProject.ext.testDependencies
-    def androidTestDependencies = rootProject.ext.androidTestDependencies
-    def androidDependencies = rootProject.ext.androidDependencies
+    def injectionDependencies = rootProject.ext.injectionDependencies
 
-    //firebase components
-    implementation firebaseDependencies.rxfirebase
-    implementation firebaseDependencies.firebaseauth
-    implementation firebaseDependencies.firebasestorage
-    implementation 'com.github.FrangSierra:RxFirebase:1.5.6'
-
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation commonDependencies.kotlin
-    implementation commonDependencies.rxjava
-    implementation commonDependencies.rxkotlin
     implementation commonDependencies.threeTenABP
-
-    implementation commonDependencies.timber
-
     implementation injectionDependencies.koin
 
     testImplementation testDependencies.junit
     testImplementation testDependencies.mockk
 
-    implementation androidDependencies.appcompat
+    implementation 'com.github.simbiose:Encryption:2.0.1'
+}
 
-    androidTestImplementation androidTestDependencies.androidJunit
-    androidTestImplementation androidTestDependencies.espresso
-
-
-
+repositories {
+    mavenCentral()
 }
