--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation project(':domain')
     implementation project(':service')
     implementation project(':database')
+    implementation project(':encryption')
     implementation project(':storage')
     implementation project(':draw')
     implementation project(':util')
