--- a/encryption/build.gradle
+++ b/encryption/build.gradle
@@ -41,9 +41,10 @@ dependencies {
     testImplementation testDependencies.junit
     testImplementation testDependencies.mockk
 
-//    compile('com.google.crypto.tink:tink:1.3.0-rc2'){
-//        exclude group:'com.google.protobuf', module: 'protobuf-lite'
-//    }
+    implementation("com.google.crypto.tink:tink-android:1.3.0-rc2") {
+        exclude group: 'com.google.protobuf', module: 'protobuf-javalite'
+    }
+    implementation 'com.google.protobuf:protobuf-lite:3.0.1'
 }
 
 repositories {
