--- a/encryption/build.gradle
+++ b/encryption/build.gradle
@@ -44,7 +44,11 @@ dependencies {
     implementation("com.google.crypto.tink:tink-android:1.3.0-rc2") {
         exclude group: 'com.google.protobuf', module: 'protobuf-javalite'
     }
-    implementation 'com.google.protobuf:protobuf-lite:3.0.1'
+    implementation "com.google.protobuf:protobuf-lite:3.0.1"
+
+    implementation "com.google.cloud:google-cloud-kms:1.35.0"
+    implementation 'io.grpc:grpc-okhttp:1.25.0'
+    implementation "com.squareup.retrofit2:retrofit:2.6.2"
 }
 
 repositories {
