--- a/encryption/build.gradle
+++ b/encryption/build.gradle
@@ -20,7 +20,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
@@ -41,14 +40,16 @@ dependencies {
     testImplementation testDependencies.junit
     testImplementation testDependencies.mockk
 
-    implementation("com.google.crypto.tink:tink-android:1.3.0-rc2") {
+    implementation("com.google.crypto.tink:tink:1.3.0-rc3") {
         exclude group: 'com.google.protobuf', module: 'protobuf-javalite'
     }
     implementation "com.google.protobuf:protobuf-lite:3.0.1"
 
-    implementation "com.google.cloud:google-cloud-kms:1.35.0"
     implementation 'io.grpc:grpc-okhttp:1.25.0'
-    implementation "com.squareup.retrofit2:retrofit:2.6.2"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation "com.squareup.moshi:moshi-kotlin:1.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.6.2"
 }
 
 repositories {
