--- a/encryption/build.gradle
+++ b/encryption/build.gradle
@@ -40,12 +40,7 @@ dependencies {
     testImplementation testDependencies.junit
     testImplementation testDependencies.mockk
 
-    implementation("com.google.crypto.tink:tink:1.3.0-rc3") {
-        exclude group: 'com.google.protobuf', module: 'protobuf-javalite'
-    }
-    implementation "com.google.protobuf:protobuf-lite:3.0.1"
-
-    implementation 'io.grpc:grpc-okhttp:1.25.0'
+    implementation("com.google.crypto.tink:tink-android:1.2.2")
 
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation "com.squareup.moshi:moshi-kotlin:1.9.0"
