--- a/database/build.gradle
+++ b/database/build.gradle
@@ -38,6 +38,7 @@ android {
 dependencies {
     implementation project(':domain')
     implementation project(':util')
+    implementation project(':storage')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
