fix module dependencies using interfaces

--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -24,7 +24,9 @@ android {
 }
 dependencies {
     implementation project(':domain')
+    implementation project(':database')
     implementation project(':util')
+
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
