--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,11 +98,12 @@ dependencies {
     implementation androidDependencies.viewmodellifecycle
 
     implementation uiDependencies.glide
-   // implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    // implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation uiDependencies.legacysupport
     implementation uiDependencies.googleplay
     //implementation 'com.google.android.gms:play-services-plus:16.0.0'
     //implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt uiDependencies.glidecompiler
     implementation uiDependencies.recyclerview
     implementation uiDependencies.rv_selection
