--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     androidTestImplementation androidTestDependencies.androidJunit
     androidTestImplementation androidTestDependencies.espresso
 
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7', changing: true
+
 }
