--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -28,7 +28,7 @@ ext {
     firebase_analytics ='17.2.0'
 
     // UI LIBRARIES
-    constraint_layout_version = '1.1.3'
+    constraint_layout_version = '2.0.0-beta4'
     fragment_version = '1.1.0'
 
     recyclerview_version = '1.0.0'
