--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,8 +1,8 @@
-#Tue Aug 27 10:14:40 CEST 2019
+#Wed Feb 26 12:24:11 CET 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-android.enableJetifier=true
 zipStoreBase=GRADLE_USER_HOME
+android.enableJetifier=true
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.4.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
 android.useAndroidX=true
