--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,10 +57,18 @@ android {
         enabled = true
     }
     compileOptions {
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
     buildToolsVersion = '28.0.3'
+
+// To inline the bytecode built with JVM target 1.8 into
+// bytecode that is being built with JVM target 1.6. (e.g. navArgs)
+
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 
 }
 
@@ -99,11 +107,16 @@ dependencies {
     implementation androidDependencies.viewmodellifecycle
 
     implementation uiDependencies.glide
-   // implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    // implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation uiDependencies.legacysupport
     implementation uiDependencies.googleplay
     //implementation 'com.google.android.gms:play-services-plus:16.0.0'
     //implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
     kapt uiDependencies.glidecompiler
     implementation uiDependencies.recyclerview
     implementation uiDependencies.rv_selection
@@ -116,6 +129,8 @@ dependencies {
     implementation uiDependencies.materialdrawer
     implementation uiDependencies.annotation
     implementation uiDependencies.material
+
+    implementation uiDependencies.lottie
 
 
     implementation "com.github.skydoves:colorpickerpreference:2.0.0"
@@ -154,7 +169,7 @@ dependencies {
     androidTestImplementation testDependencies.koinTesting
 
     androidTestImplementation androidTestDependencies.uiAutomator
-
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
 
 }
