--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -75,6 +75,8 @@ ext {
 
     viewpager_version = '1.0.0-beta05'
 
+    lottieVersion = '3.4.0'
+
     //Version Code
     ext.versionMajor = 1
     ext.versionMinor = 1
@@ -128,7 +130,8 @@ ext {
             testRules      : "androidx.test:rules:$test_version",
             testRunner     : "androidx.test:runner:$test_version",
             espressoContrib: "androidx.test.espresso:espresso-contrib:$espresso_contrib_version",
-            uiAutomator    : "androidx.test.uiautomator:uiautomator:$uiAutomator_version"
+            uiAutomator    : "androidx.test.uiautomator:uiautomator:$uiAutomator_version",
+
     ]
 
     injectionDependencies = [
@@ -172,7 +175,8 @@ ext {
             design             : "com.android.support:design:$design_version",
             viewpager2         : "androidx.viewpager2:viewpager2:$viewpager_version",
             googleplay         :  "com.google.android.gms:play-services-plus:$play_services_version",
-            legacysupport      : "androidx.legacy:legacy-support-v4:$legacy_support_version"
+            legacysupport      : "androidx.legacy:legacy-support-v4:$legacy_support_version",
+            lottie         : "com.airbnb.android:lottie:$lottieVersion"
 
 
     ]
