all tests to a working condition, ready to do normal testing

--- a/service/build.gradle
+++ b/service/build.gradle
@@ -27,6 +27,7 @@ android {
 dependencies {
     implementation project(':domain')
     implementation project(':storage')
+    implementation project(':database')
     implementation project(':util')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
