--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,6 +157,9 @@ dependencies {
     androidTestImplementation androidTestDependencies.uiAutomator
 
 
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
+
+
 
 }
 
