--- a/encryption/build.gradle
+++ b/encryption/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     testImplementation testDependencies.koinTesting
     // TODO: add deps to dependencies.gradle
 
-    implementation("com.google.crypto.tink:tink:1.2.2")
+    implementation("com.google.crypto.tink:tink-android:1.2.2")
     // TODO: check if this can be removed
     annotationProcessor("com.google.auto.service:auto-service:1.0-rc4")
 
