--- a/.travis.yml
+++ b/.travis.yml
@@ -35,16 +35,16 @@ before_install:
 script:
  - ./gradlew ktlint || travis_terminate 1
  - ./gradlew test || travis_terminate 1
- - ./gradlew build assembleAndroidTest || travis_terminate 1
- - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI -s WXGA800
- - emulator -avd test -no-skin -no-audio -no-window &
- - android-wait-for-emulator
- - adb shell settings put global window_animation_scale 0
- - adb shell settings put global transition_animation_scale 0
- - adb shell settings put global animator_duration_scale 0
- - adb shell input keyevent 82 &
- - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
- - ./gradlew connectedCheck || travis_terminate 1
+# - ./gradlew build assembleAndroidTest || travis_terminate 1
+# - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI -s WXGA800
+# - emulator -avd test -no-skin -no-audio -no-window &
+# - android-wait-for-emulator
+# - adb shell settings put global window_animation_scale 0
+# - adb shell settings put global transition_animation_scale 0
+# - adb shell settings put global animator_duration_scale 0
+# - adb shell input keyevent 82 &
+# - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+# - ./gradlew connectedCheck || travis_terminate 1
 
 before_cache:
  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
