--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ android:
     - google-gdk-license-.+
 
 before_install:
+ - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_iv -in google-services.json.enc -out app/google-services.json -d
  - chmod +x gradlew
  - yes | sdkmanager "platforms;android-28"
 
