--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ android:
   - google-gdk-license-.+
 before_install:
 - openssl aes-256-cbc -K $encrypted_f761570c4ae9_key -iv $encrypted_f761570c4ae9_iv
-  -in google-services.json.enc -out google-services.json -d
+  -in google-services.json.enc -out app/google-services.json -d
 - chmod +x gradlew
 - yes | sdkmanager "platforms;android-28"
 script:
