--- a/encryption/build.gradle
+++ b/encryption/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     // TODO: add deps to dependencies.gradle
 
     implementation("com.google.crypto.tink:tink-android:1.2.2")
+    testImplementation("com.google.crypto.tink:tink:1.2.2") {
+        exclude group:'com.google.crypto.tink', module:'tink-android'
+    }
     // TODO: check if this can be removed
     annotationProcessor("com.google.auto.service:auto-service:1.0-rc4")
 
