--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,39 +71,27 @@ dependencies {
     implementation project(':storage')
     implementation project(':draw')
     implementation project(':util')
-
-
     implementation authdependencies.auth0
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     def commonDependencies = rootProject.ext.commonDependencies
     def injectionDependencies = rootProject.ext.injectionDependencies
     def androidTestDependencies = rootProject.ext.androidTestDependencies
     def androidDependencies = rootProject.ext.androidDependencies
     def uiDependencies = rootProject.ext.uiDependencies
-
-
     implementation commonDependencies.kotlin
     implementation commonDependencies.threeTenABP
     implementation commonDependencies.rxjava
     implementation commonDependencies.rxandroid
     implementation commonDependencies.licenses
-
     implementation commonDependencies.timber
-
     implementation injectionDependencies.koin
     implementation injectionDependencies.koin_viewModel
-
     implementation androidDependencies.appcompat
     implementation androidDependencies.lifecycle
     implementation androidDependencies.viewmodellifecycle
-
     implementation uiDependencies.glide
-
     implementation uiDependencies.legacysupport
     implementation uiDependencies.googleplay
-
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt uiDependencies.glidecompiler
     implementation uiDependencies.recyclerview
@@ -113,26 +101,21 @@ dependencies {
     implementation uiDependencies.fotoApparat
     implementation uiDependencies.fotoApparatAdapters
     implementation uiDependencies.texteditor
-
     implementation uiDependencies.materialdrawer
     implementation uiDependencies.annotation
     implementation uiDependencies.material
-
-
-    implementation "com.github.skydoves:colorpickerpreference:2.0.0"
-
+    implementation 'com.github.skydoves:colorpickerpreference:2.0.0'
     implementation commonDependencies.navktx
     implementation commonDependencies.navui
-
     implementation uiDependencies.viewpager2
 
-    implementation firebaseDependencies.firebasestorageui
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 
+    implementation firebaseDependencies.firebasestorageui
     //Use Java library for unit testing instead of Android to avoid requesting Android Device Timezone
     testImplementation(testDependencies.threeTenBP) {
         exclude group: 'com.jakewharton.threetenabp', module: 'threetenabp'
     }
-
     testImplementation testDependencies.junit
     testImplementation testDependencies.mockk
     testImplementation testDependencies.coreTesting
@@ -142,8 +125,6 @@ dependencies {
     implementation testDependencies.firebase_analytics
     implementation testDependencies.crashlytics
     implementation firebaseDependencies.performance
-
-
     // AndroidJUnitRunner and JUnit Rules
     androidTestImplementation androidTestDependencies.testCore
     androidTestImplementation androidTestDependencies.testRules
@@ -154,11 +135,7 @@ dependencies {
     androidTestImplementation androidTestDependencies.espressoContrib
     //koin
     androidTestImplementation testDependencies.koinTesting
-
     androidTestImplementation androidTestDependencies.uiAutomator
-
-
-
 }
 
 private Integer generateVersionCode() {
