--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <supports-screens
         android:anyDensity="true"
@@ -31,12 +31,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.FullScreen"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".faith.backpackScreen.BackpackScreenActivity"
+        <activity android:name=".faith.cinema.CinemaActivity"></activity>
+        <activity
+            android:name=".faith.backpackScreen.BackpackScreenActivity"
             android:label="@string/title_backpack"
             android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.FullScreen"
-            >
-
+            android:theme="@style/AppTheme.FullScreen">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="be.hogent.faith.faith.cinema.CinemaActivity" />
         </activity>
         <activity
             android:name=".faith.library.LibraryActivity"
