--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,12 +104,11 @@ dependencies {
     implementation uiDependencies.materialdrawer
     implementation uiDependencies.annotation
     implementation uiDependencies.material
-    implementation 'com.github.skydoves:colorpickerpreference:2.0.0'
+    implementation uiDependencies.colorpicker
     implementation commonDependencies.navktx
     implementation commonDependencies.navui
     implementation uiDependencies.viewpager2
-
-    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
+    implementation uiDependencies.youtubePlayerView
 
     implementation firebaseDependencies.firebasestorageui
     //Use Java library for unit testing instead of Android to avoid requesting Android Device Timezone
