--- a/service/build.gradle
+++ b/service/build.gradle
@@ -33,22 +33,16 @@ dependencies {
 
     def commonDependencies = rootProject.ext.commonDependencies
     def injectionDependencies = rootProject.ext.injectionDependencies
+    def retrofitDependencies = rootProject.ext.retrofitDependencies
 
     implementation commonDependencies.kotlin
     implementation commonDependencies.threeTenABP
     implementation commonDependencies.rxjava
     implementation commonDependencies.rxkotlin
 
-    // Moshi
-    implementation "com.squareup.moshi:moshi:1.9.1"
-    implementation "com.squareup.moshi:moshi-kotlin:1.9.1"
-
-    // Retrofit with Moshi Converter
-    implementation "com.squareup.retrofit2:retrofit:2.5.0"
-    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
-
-    implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0"
+    implementation retrofitDependencies.retrofit
+    implementation retrofitDependencies.gson
+    implementation retrofitDependencies.rxjavaAdapter
 
     implementation injectionDependencies.koin
 
