--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
 android.useAndroidX=true
 org.gradle.parallel=true
 android.databinding.incremental=true
+kotlin.incremental=true
