--- a/encryption/build.gradle
+++ b/encryption/build.gradle
@@ -23,6 +23,12 @@ android {
     defaultConfig {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    android {
+        compileOptions {
+            targetCompatibility = "8"
+            sourceCompatibility = "8"
+        }
+    }
 }
 
 dependencies {
