--- a/encryption/build.gradle
+++ b/encryption/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation commonDependencies.kotlin
     implementation commonDependencies.rxkotlin
     implementation commonDependencies.threeTenABP
+    testImplementation(testDependencies.threeTenBP) {
+        exclude group: 'com.jakewharton.threetenabp', module: 'threetenabp'
+    }
     implementation injectionDependencies.koin
 
     testImplementation testDependencies.junit
