--- a/service/build.gradle
+++ b/service/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     implementation commonDependencies.kotlin
     implementation commonDependencies.threeTenABP
+    implementation commonDependencies.timber
     implementation commonDependencies.rxjava
     implementation commonDependencies.rxkotlin
 
